Wayland: when screens have same dpr use NativeSize

For GrabMode::AllScreens

BUG: 440226